[package]
name = "tinyt"
version = "0.0.1"
authors = ["Andrew Lonsdale <andrew.lonsdale@lonsbio.com.au>"]
edition = "2018"

[dependencies]
bio = "0.31"
bio-types = "0.5"
crossbeam-utils = "0.6"
debruijn = { git = "https://github.com/lonsbio/rust-debruijn" }
docopt = "1.0"
failure = "0.1"
flate2 = "1.0"
itertools = "0.7"
lazy_static = "1.4"
env_logger = "0.9.0"
log = "0.4"
log4rs = "1.0.0"
rayon = "1.0"
serde = "1.0"
pretty_assertions = "0.5.1"
boomphf = "0.5"
dashmap = "1.2"
bincode = "1.2"
pretty_env_logger = "0.3"

[dependencies.smallvec]
version = "0.6"
features = ["serde"]

[dev-dependencies.proptest]
version = "0.9"
default-features = false
# Enable all default features not known to break code coverage builds
features = ["default-code-coverage"]

[profile.release]
debug = true

[features]
default = []
slow_tests = []
